// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates tokens for empty lines 1`] = `
Array [
  Object {
    "type": "leftPar",
    "value": "(",
  },
  Object {
    "type": "identifier",
    "value": "a",
  },
  Object {
    "type": "emptyLine",
    "value": "",
  },
  Object {
    "type": "identifier",
    "value": "b",
  },
  Object {
    "type": "rightPar",
    "value": ")",
  },
]
`;

exports[`recognizes all regular token types 1`] = `
Array [
  Object {
    "type": "leftPar",
    "value": "(",
  },
  Object {
    "type": "keyword",
    "value": "lambda",
  },
  Object {
    "type": "identifier",
    "value": "id1",
  },
  Object {
    "type": "prefix",
    "value": "&",
  },
  Object {
    "type": "identifier",
    "value": "id2",
  },
  Object {
    "type": "leftPar",
    "value": "(",
  },
  Object {
    "type": "operator",
    "value": "=",
  },
  Object {
    "type": "boolLiteral",
    "value": "true",
  },
  Object {
    "type": "numLiteral",
    "value": "123",
  },
  Object {
    "type": "rightPar",
    "value": ")",
  },
  Object {
    "type": "rightPar",
    "value": ")",
  },
]
`;

exports[`recognizes block comments 1`] = `
Array [
  Object {
    "type": "leftPar",
    "value": "(",
  },
  Object {
    "type": "identifier",
    "value": "a",
  },
  Object {
    "type": "blockComment",
    "value": "#|com
      ment|#",
  },
  Object {
    "type": "identifier",
    "value": "b",
  },
  Object {
    "type": "rightPar",
    "value": ")",
  },
]
`;

exports[`recognizes line comments 1`] = `
Array [
  Object {
    "type": "leftPar",
    "value": "(",
  },
  Object {
    "type": "identifier",
    "value": "a",
  },
  Object {
    "type": "lineComment",
    "value": ";comment",
  },
  Object {
    "type": "identifier",
    "value": "b",
  },
  Object {
    "type": "rightPar",
    "value": ")",
  },
]
`;

exports[`treats a line as empty even if it contains whitespace 1`] = `
Array [
  Object {
    "type": "leftPar",
    "value": "(",
  },
  Object {
    "type": "identifier",
    "value": "a",
  },
  Object {
    "type": "emptyLine",
    "value": "",
  },
  Object {
    "type": "identifier",
    "value": "b",
  },
  Object {
    "type": "rightPar",
    "value": ")",
  },
]
`;
